# crimson-crab

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  DISTRIBUTION.md  LAUNCH.md  LAUNCH_POSTS.md  LICENSE-APACHE  LICENSE-MIT  README.md  RELEASING.md  ROADMAP.md  SECURITY.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
docs/: index.html  wire-api.md
examples/: basic.rs  batches.rs  live_smoke.rs  prompt_caching.rs  streaming.rs  structured_output.rs  thinking.rs  tool_use.rs
site/: index.html
src/: client.rs  error.rs  http.rs  lib.rs  model_ids.rs  streaming.rs
src/api/: batches.rs  messages.rs  mod.rs  models.rs
src/types/: cache.rs  content.rs  message.rs  mod.rs  output.rs  thinking.rs  tool.rs
tests/: batches.rs  fable_probes.rs  messages.rs  probe_review.rs  probe_streaming_http.rs  streaming.rs  streaming_timeout.rs
